--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-signUpdatabaseUrl = mongodb+srv://devbatsystudios:phill2004@cluster0.marysmm.mongodb.net/sheller?retryWrites=true&w=majority
-registrationdatabaseUrl = mongodb+srv://devbatsystudios:phill2004@cluster0.marysmm.mongodb.net/registrationDataBase?retryWrites=true&w=majority
-adminFeedBackdatabaseUrl = mongodb+srv://devbatsystudios:phill2004@cluster0.marysmm.mongodb.net/adminFeedBack?retryWrites=true&w=majority
+signUpdatabaseUrl = mongodb+srv://jenniferchinabu:jenniferuser1234@cluster0.snls7ni.mongodb.net/signup?retryWrites=true&w=majority
+registrationdatabaseUrl = mongodb+srv://jenniferchinabu:jenniferuser1234@cluster0.snls7ni.mongodb.net/registrationDataBase?retryWrites=true&w=majority
+adminFeedBackdatabaseUrl = mongodb+srv://jenniferchinabu:jenniferuser1234@cluster0.snls7ni.mongodb.net/adminFeedBack?retryWrites=true&w=majority
